# aoc

./: Makefile  README.md  aoc.cabal  fourmolu.yaml
app/: CLI.hs  Main.hs
