cabal-version:      3.4
name:               aoc
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Gustaf Rydholm
maintainer:         gustaf.rydholm@gmail.com
-- copyright:
category:           aoc
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable aoc
    import:           warnings
    main-is:          Main.hs
    other-modules:    CLI
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0,
                      http-client ^>=0.7.13,
                      aeson ^>=2.1.1,
                      bytestring ^>=0.11.3,
                      http-conduit ^>=2.3.8,
                      http-types ^>=0.12.3,
                      time ^>=1.12,
                      case-insensitive ^>=1.2.1,
                      utf8-string ^>=1.0.2,
                      optparse-applicative ^>=0.17.0,
                      tagsoup ^>=0.14.8


    hs-source-dirs:   app
    default-language: GHC2021
